test/invalid/idl/duplicate-escaped.webidl
[Exposed=Window]
interface Iroha {};
[Exposed=Window]
interface _Iroha {};
